# python-airslate

./: .coveragerc  .gitignore  .pylintrc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  default.mk  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  main.yml  package.yml
airslate/: __init__.py  client.py  constants.py  exceptions.py  facades.py  flow.py  helpers.py  models.py  schemas.py  session.py  sessions.py  utils.py
airslate/entities/: __init__.py  base.py  documents.py  fields.py  tags.py
airslate/models/: __init__.py  base.py  documents.py  tags.py
airslate/resources/: __init__.py  addons.py  base_resource.py  documents.py  flow.py  flow_documents.py  organizations.py  slate.py  slate_addon.py  slates.py
docs/: addons.rst  api_index.rst  configuration.rst  document_fields.rst  flow_documents.rst  flow_tags.rst  organizations.rst  slate_addon_files.rst  slate_tags.rst
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
tests/: conftest.py  rsa_private.pem  rsa_public.pem  test_client.py  test_exceptions.py  test_facades.py  test_flow.py  test_helpers.py  test_sessions.py
tests/entities/: test_base.py  test_documents.py  test_field.py  test_tags.py
tests/models/: test_base.py  test_models.py  test_organizations.py  test_tags.py
tests/resources/: factories.py  test_addons.py  test_base.py  test_base_resource.py  test_documents.py  test_flow.py  test_flow_documents.py  test_organizations.py  test_slate.py  test_slate_addon_files.py
