# This file is part of the airslate.
#
# Copyright (c) 2021-2023 airSlate, Inc.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

[metadata]
license_files = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose --color=no

[flake8]
exclude=.git,__pycache__,.pytest_cache,.venv,build,dist,.eggs,examples
application-import-names=airslate,tests
import-order-style=smarkets
max-complexity = 10
per-file-ignores =
    airslate/client.py:C901

[coverage:report]
# Set the number of decimal places in coverage percentage
precision = 2

# Show lines that were not executed
show_missing = True

[coverage:html]
# Directory for the HTML format report
directory = htmlcov

[coverage:xml]
# Filename for the XML format report
output = coverage.xml

[coverage:run]
# Enable branch coverage (default: False)
branch = True

# Run tests in parallel (useful when using CI/CD)
parallel = True

# Filename for storing coverage data
data_file = coverage.db

# Omit specified files or directories from the report
omit =
    */tests/*
    */.venv/*
    */migrations/*
    */site-packages/*
    */__pycache__/*
