# This file is part of the airslate.
#
# Copyright (c) 2021-2023 airSlate, Inc.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

[metadata]
license_files = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose --color=no

[pylint]
# Use multiple processes to speed up Pylint.
# Specifying 0 will auto-detect the number of processors available to use.
jobs = 0

# The type of string formatting that logging methods do.
# 'old' means using % formatting, 'new' is for '{}' formatting.
logging_format_style = new

[flake8]
# Sets the maximum allowed length for a line of code.
# Any line of code exceeding this length will be flagged by Flake8 as a
# violation of the coding style. The purpose of this setting is to enforce code
# readability and maintainability by preventing excessively long lines.
max-line-length = 79

# List of files and directories to exclude from linting
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .venv,
    build,
    dist,
    .eggs,examples

# List of modules to be considered as local
application-import-names =
    airslate,
    tests

# Set the import order style to follow Smarkets' style
import-order-style = smarkets

# Set the maximum allowed complexity of the code
max-complexity = 10

[coverage:report]
# Set the number of decimal places in coverage percentage
precision = 2

# Show lines that were not executed
show_missing = True

[coverage:html]
# Directory for the HTML format report
directory = htmlcov

[coverage:xml]
# Filename for the XML format report
output = coverage.xml

[coverage:run]
# Enable branch coverage (default: False)
branch = True

# Run tests in parallel (useful when using CI/CD)
parallel = True

# Filename for storing coverage data
data_file = coverage.db

# Omit specified files or directories from the report
omit =
    */tests/*
    */.venv/*
    */__pycache__/*
